Melhorias na documentação

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Contadoria
 <section class="hero diagonal">
 	<div class="container">
 		<h2>Contadoria</h2>
-		<p>Links dos projetos, notícias, atualizações e instruções básicas de instalação.</p>
+		<p>Links para os projetos, notícias, atualizações e instruções básicas de instalação.</p>
 		<p>
 			<a class="button" target="_blank" href="https://github.com/contadoria">
 				<img src="{{ site.baseurl }}/images/github.svg" alt="Github" width="28">					
